[package]
name = "tiled-wgpu"
version = "0.1.0"
authors = ["Evan Pratten <braincell-check@gmail.com>"]
edition = "2018"
description = "Load full tiled maps onto the GPU"
documentation = "https://docs.rs/tiled-wgpu"
readme = "README.md"
homepage = "https://github.com/braincell-check/tiled-wgpu"
repository = "https://github.com/braincell-check/tiled-wgpu"
license = "GPL-3.0"
keywords = []
categories = []
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wgpu = "^0.11.0"
tiled = "^0.9"
log = "^0.4"
image = "^0.23"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.9.0"
tokio = { version = "^1.12", features = ["macros", "rt-multi-thread"] }
